Fixed the line that merges the data and pos_vel recarrays. Measured the timing differences between the vectorized and unvectorized call to spice.str2et - the difference is small.

--- a/test_orbitfit.ipynb
+++ b/test_orbitfit.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "orbitfit_cli(\n",
-    "    input=\"/Users/drew/code/layup/100_random_mpc_ADES_latest_provid_only.csv\",\n",
+    "    input=\"./100_random_mpc_ADES_latest_provid_only.csv\",\n",
     "    input_file_format=\"ADES_csv\",\n",
     "    output_file_stem=\"output\",\n",
     "    output_file_format=\"csv\",\n",
