--- a/test.ipynb
+++ b/test.ipynb
@@ -5,11 +5,23 @@
    "execution_count": 1,
    "id": "42eea4ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/mholman/layup'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from layup import routines\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "os.getcwd()"
    ]
   },
   {
@@ -67,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fa61c44e",
+   "id": "2e9d76a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +90,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "a986b2bc",
+   "id": "a21531a3",
    "metadata": {},
    "source": [
     "x = routines.run_from_files(\"/Users/mholman/Library/Caches/layup/\", obs_list)"
@@ -87,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "de4aece9",
+   "id": "977f0cda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,26 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "54d6d8d8",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (776495376.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    solns[0].\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "solns[0]."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "61901522",
+   "id": "d0c639fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "147d0a2d",
+   "execution_count": 7,
+   "id": "ec18d0f2",
    "metadata": {},
    "outputs": [
     {
@@ -393,18 +386,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a7a1d9ea",
+   "execution_count": 15,
+   "id": "48cee547",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "chi2: 69065.6\n",
+      "lambda: 2.12726e+07\n",
+      "dX\n",
+      "-4.56702e-07\n",
+      " 2.17287e-06\n",
+      "  7.8261e-07\n",
+      "-1.81038e-09\n",
+      " 8.01972e-09\n",
+      " 4.74008e-09\n",
+      "chi2: 1838.44\n",
+      "lambda: 1.06363e+07\n",
+      "dX\n",
+      " 4.91078e-11\n",
+      " 3.52183e-11\n",
+      "  1.6869e-11\n",
+      "-4.86298e-14\n",
+      " 8.08041e-14\n",
+      " 4.84412e-14\n",
+      "chi2: 1838.44\n",
+      "lambda: 5.31816e+06\n",
+      "dX\n",
+      "-2.24756e-14\n",
+      "-1.12132e-14\n",
+      "-3.60179e-15\n",
+      " 3.64105e-17\n",
+      "-4.57873e-17\n",
+      "-1.99776e-17\n",
+      "flag: 0 iters: 2 dof: 8618 chi2: 1838.441177\n",
+      "obs_cov: \n",
+      " 3.55168e-13 -2.39876e-13\n",
+      "-2.39876e-13  1.71548e-13\n",
+      "obs_cov: \n",
+      "  4.0629e-15 -1.43697e-15\n",
+      "-1.43697e-15   3.8365e-15\n"
+     ]
+    }
+   ],
    "source": [
-    "x.epoch"
+    "x = routines.run_from_vector_with_ic(assist_ephem, x, obs_list)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "d5631a76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_layup_cpp._core.gauss_soln"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5eabbee8",
+   "id": "edee35de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,13 +467,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f89c015e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'_layup_cpp._core.gauss_soln' object has no attribute 'dof'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdof\u001b[49m, x\u001b[38;5;241m.\u001b[39mniter, x\u001b[38;5;241m.\u001b[39mstate, x\u001b[38;5;241m.\u001b[39mcsq, x\u001b[38;5;241m.\u001b[39mepoch\n",
+      "\u001b[0;31mAttributeError\u001b[0m: '_layup_cpp._core.gauss_soln' object has no attribute 'dof'"
+     ]
+    }
+   ],
    "source": [
-    "x.ndof, x.niter, x.state, x.csq, x.epoch"
+    "x.dof, x.niter, x.state, x.csq, x.epoch"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f82e01e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
