One last push. I promise.

--- a/test.ipynb
+++ b/test.ipynb
@@ -21,6 +21,12 @@
     "from layup import routines\n",
     "import numpy as np\n",
     "import os\n",
+    "\n",
+    "\n",
+    "GMtotal = 0.0002963092748799319\n",
+    "AU_M = 149597870700\n",
+    "SPEED_OF_LIGHT = 2.99792458e8 * 86400.0 / AU_M\n",
+    "\n",
     "os.getcwd()"
    ]
   },
@@ -79,27 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2e9d76a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "GMtotal = 0.0002963092748799319\n",
-    "AU_M = 149597870700\n",
-    "SPEED_OF_LIGHT = 2.99792458e8 * 86400.0 / AU_M"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "a21531a3",
-   "metadata": {},
-   "source": [
-    "x = routines.run_from_files(\"/Users/mholman/Library/Caches/layup/\", obs_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "977f0cda",
+   "id": "eb9efe66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,8 +94,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "aee3e4f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'gauss'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solns[0].method"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "id": "d0c639fc",
+   "id": "b10a8923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,378 +126,102 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ec18d0f2",
+   "id": "b28e00b3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "chi2: 28305.4\n",
-      "lambda: 2.12726e+07\n",
-      "dX\n",
-      "-0.000400072\n",
-      " 0.000821698\n",
-      " 0.000340927\n",
-      "-0.000109324\n",
-      " 0.000322614\n",
-      " 0.000136549\n",
-      "chi2: 2710.78\n",
-      "lambda: 1.06363e+07\n",
-      "dX\n",
-      "-0.000640446\n",
-      "  0.00164414\n",
-      "  0.00072191\n",
-      " 1.18867e-07\n",
-      "-2.18375e-05\n",
-      "-9.27258e-06\n",
-      "chi2: 2553.33\n",
-      "lambda: 5.31816e+06\n",
-      "dX\n",
-      " -0.00120814\n",
-      "  0.00310366\n",
-      "  0.00136266\n",
-      " 5.49218e-07\n",
-      "-4.19186e-05\n",
-      " -1.7791e-05\n",
-      "chi2: 2269.09\n",
-      "lambda: 2.65908e+06\n",
-      "dX\n",
-      " -0.00215771\n",
-      "  0.00554305\n",
-      "  0.00243369\n",
-      " 9.67324e-07\n",
-      "-7.48324e-05\n",
-      "-3.17597e-05\n",
-      "chi2: 1801.84\n",
-      "lambda: 1.32954e+06\n",
-      "dX\n",
-      " -0.00347457\n",
-      "  0.00892596\n",
-      "  0.00391897\n",
-      " 1.52207e-06\n",
-      "-0.000120419\n",
-      "-5.11058e-05\n",
-      "chi2: 1159.8\n",
-      "lambda: 664770\n",
-      "dX\n",
-      " -0.00465792\n",
-      "   0.0119659\n",
-      "  0.00525366\n",
-      " 1.96079e-06\n",
-      "-0.000161244\n",
-      "-6.84286e-05\n",
-      "chi2: 517.27\n",
-      "lambda: 332385\n",
-      "dX\n",
-      " -0.00464196\n",
-      "   0.0119248\n",
-      "  0.00523566\n",
-      "  1.8422e-06\n",
-      "-0.000160429\n",
-      "-6.80787e-05\n",
-      "chi2: 132.113\n",
-      "lambda: 166192\n",
-      "dX\n",
-      " -0.00302761\n",
-      "  0.00777762\n",
-      "  0.00341484\n",
-      " 1.12662e-06\n",
-      "-0.000104463\n",
-      "-4.43262e-05\n",
-      "chi2: 21.6149\n",
-      "lambda: 83096.2\n",
-      "dX\n",
-      " -0.00116153\n",
-      "  0.00298384\n",
-      "  0.00131009\n",
-      " 4.16965e-07\n",
-      "-4.00436e-05\n",
-      "-1.69909e-05\n",
-      "chi2: 9.24679\n",
-      "lambda: 41548.1\n",
-      "dX\n",
-      "-0.000244864\n",
-      "  0.00062903\n",
-      " 0.000276183\n",
-      " 8.86332e-08\n",
-      "-8.44422e-06\n",
-      "-3.58299e-06\n",
-      "chi2: 8.78409\n",
-      "lambda: 20774\n",
-      "dX\n",
-      " -2.7255e-05\n",
-      " 7.00155e-05\n",
-      "  3.0741e-05\n",
-      " 1.01052e-08\n",
-      "-9.40542e-07\n",
-      "-3.99096e-07\n",
-      "chi2: 8.7789\n",
-      "lambda: 10387\n",
-      "dX\n",
-      "-1.56234e-06\n",
-      " 4.01351e-06\n",
-      " 1.76216e-06\n",
-      "  5.8783e-10\n",
-      "-5.39379e-08\n",
-      " -2.2888e-08\n",
-      "chi2: 8.77889\n",
-      "lambda: 5193.51\n",
-      "dX\n",
-      "-4.54661e-08\n",
-      " 1.16798e-07\n",
-      " 5.12806e-08\n",
-      " 1.72387e-11\n",
-      "-1.57007e-09\n",
-      "-6.66279e-10\n",
-      "chi2: 8.77889\n",
-      "lambda: 2596.76\n",
-      "dX\n",
-      "-6.66857e-10\n",
-      " 1.71318e-09\n",
-      " 7.52154e-10\n",
-      " 2.54927e-13\n",
-      "-2.30368e-11\n",
-      "-9.77689e-12\n",
-      "chi2: 8.77889\n",
-      "lambda: 5193.51\n",
-      "dX\n",
-      "-5.00058e-12\n",
-      "  1.2844e-11\n",
-      " 5.63888e-12\n",
-      " 5.91667e-16\n",
-      "-1.68117e-13\n",
-      "-7.13105e-14\n",
-      "chi2: 8.77889\n",
-      "lambda: 10387\n",
-      "dX\n",
-      "-4.98227e-12\n",
-      "  1.2797e-11\n",
-      " 5.61823e-12\n",
-      " 5.84788e-16\n",
-      "-1.67485e-13\n",
-      "-7.10424e-14\n",
-      "chi2: 8.77889\n",
-      "lambda: 20774\n",
-      "dX\n",
-      "-4.94606e-12\n",
-      " 1.27039e-11\n",
-      " 5.57739e-12\n",
-      " 5.71181e-16\n",
-      "-1.66235e-13\n",
-      "-7.05119e-14\n",
-      "chi2: 8.77889\n",
-      "lambda: 41548.1\n",
-      "dX\n",
-      "-4.87519e-12\n",
-      " 1.25219e-11\n",
-      " 5.49745e-12\n",
-      " 5.44553e-16\n",
-      "-1.63788e-13\n",
-      "-6.94739e-14\n",
-      "chi2: 8.77889\n",
-      "lambda: 83096.2\n",
-      "dX\n",
-      "-4.73938e-12\n",
-      "  1.2173e-11\n",
-      " 5.34427e-12\n",
-      " 4.93521e-16\n",
-      "  -1.591e-13\n",
-      "-6.74845e-14\n",
-      "chi2: 8.77889\n",
-      "lambda: 166192\n",
-      "dX\n",
-      "-4.48926e-12\n",
-      " 1.15305e-11\n",
-      " 5.06216e-12\n",
-      " 3.99538e-16\n",
-      "-1.50466e-13\n",
-      "-6.38208e-14\n",
-      "chi2: 8.77889\n",
-      "lambda: 332385\n",
-      "dX\n",
-      "-4.06067e-12\n",
-      " 1.04295e-11\n",
-      " 4.57875e-12\n",
-      " 2.38496e-16\n",
-      " -1.3567e-13\n",
-      "-5.75429e-14\n",
-      "chi2: 8.77889\n",
-      "lambda: 664770\n",
-      "dX\n",
-      "-3.40967e-12\n",
-      "  8.7571e-12\n",
-      " 3.84448e-12\n",
-      " -6.1187e-18\n",
-      "-1.13197e-13\n",
-      " -4.8007e-14\n",
-      "chi2: 8.77889\n",
-      "lambda: 1.32954e+06\n",
-      "dX\n",
-      " -2.5819e-12\n",
-      " 6.63065e-12\n",
-      " 2.91083e-12\n",
-      "-3.17147e-16\n",
-      "-8.46218e-14\n",
-      "-3.58819e-14\n",
-      "chi2: 8.77889\n",
-      "lambda: 2.65908e+06\n",
-      "dX\n",
-      "-1.73814e-12\n",
-      " 4.46311e-12\n",
-      " 1.95915e-12\n",
-      "-6.34171e-16\n",
-      "-5.54946e-14\n",
-      "-2.35227e-14\n",
-      "chi2: 8.77889\n",
-      "lambda: 5.31816e+06\n",
-      "dX\n",
-      "-1.05131e-12\n",
-      " 2.69871e-12\n",
-      " 1.18447e-12\n",
-      "-8.92203e-16\n",
-      "-3.17846e-14\n",
-      "-1.34621e-14\n",
-      "chi2: 8.77889\n",
-      "lambda: 1.06363e+07\n",
-      "dX\n",
-      " -5.8745e-13\n",
-      " 1.50709e-12\n",
-      " 6.61272e-13\n",
-      " -1.0664e-15\n",
-      "-1.57721e-14\n",
-      " -6.6676e-15\n",
-      "chi2: 8.77889\n",
-      "lambda: 2.12726e+07\n",
-      "dX\n",
-      "-3.12322e-13\n",
-      " 8.00314e-13\n",
-      " 3.50953e-13\n",
-      "-1.16958e-15\n",
-      "-6.27508e-15\n",
-      "-2.63785e-15\n",
-      "flag: 0 iters: 26 dof: 74 chi2: 8.778888\n",
       "obs_cov: \n",
-      " 1.78224e-11 -5.59651e-12\n",
-      "-5.59651e-12  5.68666e-12\n",
+      " 2.94498e-12 -1.29453e-12\n",
+      "-1.29453e-12  1.77815e-12\n",
       "obs_cov: \n",
-      " 4.37617e-12 -2.09753e-12\n",
-      "-2.09753e-12  4.42308e-12\n"
+      "2.17541e-12 -1.2471e-12\n",
+      "-1.2471e-12  2.0049e-12\n"
      ]
     }
    ],
    "source": [
-    "x = routines.run_from_vector_with_ic(assist_ephem, solns[0], obs_list[-40:])"
+    "x = routines.run_from_vector_with_ic(assist_ephem, solns[0], obs_list[-100:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "48cee547",
+   "execution_count": 8,
+   "id": "f89c015e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "chi2: 69065.6\n",
-      "lambda: 2.12726e+07\n",
-      "dX\n",
-      "-4.56702e-07\n",
-      " 2.17287e-06\n",
-      "  7.8261e-07\n",
-      "-1.81038e-09\n",
-      " 8.01972e-09\n",
-      " 4.74008e-09\n",
-      "chi2: 1838.44\n",
-      "lambda: 1.06363e+07\n",
-      "dX\n",
-      " 4.91078e-11\n",
-      " 3.52183e-11\n",
-      "  1.6869e-11\n",
-      "-4.86298e-14\n",
-      " 8.08041e-14\n",
-      " 4.84412e-14\n",
-      "chi2: 1838.44\n",
-      "lambda: 5.31816e+06\n",
-      "dX\n",
-      "-2.24756e-14\n",
-      "-1.12132e-14\n",
-      "-3.60179e-15\n",
-      " 3.64105e-17\n",
-      "-4.57873e-17\n",
-      "-1.99776e-17\n",
-      "flag: 0 iters: 2 dof: 8618 chi2: 1838.441177\n",
-      "obs_cov: \n",
-      " 3.55168e-13 -2.39876e-13\n",
-      "-2.39876e-13  1.71548e-13\n",
-      "obs_cov: \n",
-      "  4.0629e-15 -1.43697e-15\n",
-      "-1.43697e-15   3.8365e-15\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(194, 7, 12.461067301712104, 2460610.5223419718, 0, 'orbit_fit')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "x.dof, x.iters, x.csq, x.epoch, x.flag, x.method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e76713e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = routines.run_from_vector_with_ic(assist_ephem, x, obs_list[-200:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8883faac",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "x = routines.run_from_vector_with_ic(assist_ephem, x, obs_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "d5631a76",
+   "execution_count": null,
+   "id": "8488443d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = routines.run_from_vector_with_ic(assist_ephem, x, obs_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "80f47e86",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "_layup_cpp._core.gauss_soln"
+       "<function _layup_cpp._core.PyCapsule.predict>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "edee35de",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "x = routines.run_from_vector(assist_ephem, obs_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "f89c015e",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'_layup_cpp._core.gauss_soln' object has no attribute 'dof'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdof\u001b[49m, x\u001b[38;5;241m.\u001b[39mniter, x\u001b[38;5;241m.\u001b[39mstate, x\u001b[38;5;241m.\u001b[39mcsq, x\u001b[38;5;241m.\u001b[39mepoch\n",
-      "\u001b[0;31mAttributeError\u001b[0m: '_layup_cpp._core.gauss_soln' object has no attribute 'dof'"
-     ]
-    }
-   ],
-   "source": [
-    "x.dof, x.niter, x.state, x.csq, x.epoch"
+    "routines.predict"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f82e01e9",
+   "id": "b35c5b03",
    "metadata": {},
    "outputs": [],
    "source": []
