--- a/test.ipynb
+++ b/test.ipynb
@@ -31,6 +31,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d06e802",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "85ca2528",
@@ -85,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eb9efe66",
+   "id": "9179b448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "aee3e4f5",
+   "id": "bd294ae0",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b10a8923",
+   "id": "29f0b7cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +131,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b28e00b3",
+   "execution_count": 15,
+   "id": "cdae1830",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "f89c015e",
    "metadata": {},
    "outputs": [
@@ -158,7 +164,7 @@
        "(194, 7, 12.461067301712104, 2460610.5223419718, 0, 'orbit_fit')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,10 +175,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e76713e9",
+   "execution_count": 17,
+   "id": "55360d03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "obs_cov: \n",
+      " 4.59671e-13 -8.98527e-14\n",
+      "-8.98527e-14  4.15633e-13\n",
+      "obs_cov: \n",
+      " 1.26649e-12 -7.81829e-13\n",
+      "-7.81829e-13  1.10009e-12\n"
+     ]
+    }
+   ],
    "source": [
     "x = routines.run_from_vector_with_ic(assist_ephem, x, obs_list[-200:])"
    ]
@@ -180,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8883faac",
+   "id": "3c0832d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,18 +208,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8488443d",
+   "execution_count": 18,
+   "id": "e9ac74cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(394, 5, 19.412132064021208, 2460610.5223419718, 0, 'orbit_fit')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.dof, x.iters, x.csq, x.epoch, x.flag, x.method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "99134dc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "obs_cov: \n",
+      " 3.55168e-13 -2.39876e-13\n",
+      "-2.39876e-13  1.71548e-13\n",
+      "obs_cov: \n",
+      "  4.0629e-15 -1.43697e-15\n",
+      "-1.43697e-15   3.8365e-15\n"
+     ]
+    }
+   ],
    "source": [
     "x = routines.run_from_vector_with_ic(assist_ephem, x, obs_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6cfef944",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8618, 0, 1838.4411772206538, 2460610.5223419718, 0, 'orbit_fit')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.dof, x.iters, x.csq, x.epoch, x.flag, x.method"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "80f47e86",
+   "id": "9b42523a",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +295,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b35c5b03",
+   "id": "9c359b99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "180d2a3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3539702120343186"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(2.94498e-12)*206265"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dccc6281",
    "metadata": {},
    "outputs": [],
    "source": []
